making lots of style changes after meetings this week

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cytoscape-expand-collapse": "^4.1.1",
     "cytoscape-fcose": "^2.2.0",
     "cytoscape-klay": "^3.1.4",
+    "cytoscape-navigator": "^2.0.2",
+    "cytoscape-popper": "^4.0.1",
     "fetch-sparql-endpoint": "^6.0.0",
     "vue": "^3.5.17"
   },
