--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@rdfjs/data-model": "^2.1.1",
     "@rdfjs/prefix-map": "^0.1.2",
     "cytoscape": "^3.32.1",
+    "cytoscape-context-menus": "^4.2.1",
     "cytoscape-dagre": "^2.5.0",
     "cytoscape-expand-collapse": "^4.1.1",
     "cytoscape-fcose": "^2.2.0",
     "cytoscape-klay": "^3.1.4",
     "cytoscape-navigator": "^2.0.2",
     "cytoscape-popper": "^4.0.1",
+    "cytoscape-snap-to-grid": "^2.0.0",
     "fetch-sparql-endpoint": "^6.0.0",
     "vue": "^3.5.17"
   },
