Fix Docker frontend path issues and add missing static assets
- Make vite base path configurable via VITE_BASE_PATH env var
- Set base path to / for Docker builds (was /okn-map/)
- Simplify nginx configuration to serve from root
- Simplify startup.sh (remove PUBLIC_URL substitution)
- Move static images from static/ to public/ for proper bundling
- Update background-image paths in App.vue
- Add CLAUDE.md technical documentation

All assets now load correctly at http://localhost:8080

--- a/docker-frontend/Dockerfile
+++ b/docker-frontend/Dockerfile
@@ -5,6 +5,7 @@ RUN npm install
 COPY . .
 ARG PUBLIC_URL=__PUBLIC_URL_PLACEHOLDER__
 ENV PUBLIC_URL=${PUBLIC_URL}
+ENV VITE_BASE_PATH=/
 RUN npx vite build
 
 FROM nginx:alpine
