--- a/docker-frontend/nginx.conf.template
+++ b/docker-frontend/nginx.conf.template
@@ -3,42 +3,27 @@ server {
     server_name localhost;
     root /usr/share/nginx/html;
 
-    # 1. Exact files first
+    # 1. Serve index.html at root
     location = / {
         try_files /index.html =404;
     }
 
-
-
-     # 3. Hashed assets
-    location ~ "^\%PUBLIC_URL%\/(.*\.(js|css))$" {
-        alias /usr/share/nginx/html/$1;
+    # 2. Serve assets with caching
+    location /assets/ {
         expires 1y;
         add_header Cache-Control "public";
     }
 
-    # 4. Specific files
-    location = %PUBLIC_URL%/config.json {
-        try_files /config.json =404;
+    # 3. Serve config.json without caching
+    location = /config.json {
         expires -1;
         add_header Cache-Control "no-store";
     }
 
-
-
-    location = %PUBLIC_URL%/manifest.json {
-        try_files /manifest.json =404;
-        expires -1;
-        add_header Cache-Control "no-store";
-    }
-
-    # 5. Client-side routing
-    location %PUBLIC_URL%/ {
+    # 4. Client-side routing - try file, then directory, then fallback to index.html
+    location / {
         try_files $uri $uri/ /index.html;
     }
 
-    error_page 404 /50x.html;
-    location = /50x.html {
-        internal;
-    }
+    error_page 404 /index.html;
 }
